Release version 0.03a: 1. Fix bug in Control Console CONT button: was forcing Processor to Execute state. 2. Modify message displayed during AppCache update error. 3. Fix CSS positioning for Overflow Reset button caption.

--- a/webUI/D205SupervisoryPanel.css
+++ b/webUI/D205SupervisoryPanel.css
@@ -335,7 +335,7 @@ DIV.panelRegCaption {           /* Overrides class in D205Common.css */
 #ResetOverflowBtn {
     left:               461px;
     top:                416px}
-#ResetOverFlowCaption {
+#ResetOverflowCaption {
     left:               461px;
     top:                456px;
     width:              34px}
